--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisEditor.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisEditor.cshtml
@@ -21,3 +21,108 @@
         </center>
     }
 </div>
+<script language="JavaScript" type="text/javascript">
+    <!--
+    // This allows the form to submit
+    $('#btnSubmitSalaryReviewAnalysis').click(function () {
+        //        debugger;
+        var scenariosRows = $('#scenarios').find('tbody tr');
+        saveModifiedScenarioValues(scenariosRows);
+
+        $(this).parents('form').submit();
+    });
+
+    function saveModifiedScenarioValues(scenariosRows) {
+        scenariosRows.each(function (i, val) {
+            updateScenarioValues(i, val);
+        });
+    }
+
+    // Helper method
+    // Given a search string, starting and ending string, and offset values
+    // return the string between the starting and ending string.
+    function getOldValueFromString(searchString, startingValue, endingValue, offset) {
+        //        debugger;
+        var myOldStringBegin = searchString.indexOf(startingValue);
+        var myOldStringEnd = searchString.indexOf(endingValue);
+        var myOldStringLength = myOldStringEnd - myOldStringBegin;
+        return searchString.substring(myOldStringBegin + offset, myOldStringBegin + myOldStringLength);
+    }
+
+    function updateScenarioValues(i, row) {
+        //debugger;
+        row = $(row);
+
+        var indexNeedsAdjusting = doesIndexNeedAdjusting(i, row);
+        var $myScenarioIndex = i;
+        // update scenario number
+        var hiddenScenaroNumber = row.find("#hiddenScenarioNumber");
+        hiddenScenaroNumber.val(i + 1);
+
+        var selected = row.find('#ddlSelectionType :selected');
+        //        if (selected.val() != null && selected.val() != "") {
+        // This is the text of the newly selected item, i.e. "Step 6.0", etc:
+        var selectedText = row.find('#ddlSelectionType :selected').text();
+        // set the SelectionType hidden field value with the selectedText:
+        row.find("#selectionType").val(selectedText);
+
+        // Find the control itself and
+        var ddlSelectionType = row.find('#ddlSelectionType');
+        // blank out the HTML so that the hidden field takes precedence:
+        ddlSelectionType.html("");
+        //        }
+
+        // find and reformat percent increase:
+        var tbPercentIncrease = row.find(".percent input");
+        var percentIncrease = tbPercentIncrease.val();
+        if (percentIncrease.search("%") > -1) {
+            // Then the number entered was a percent, so parse accordingly:
+            percentIncrease = $.parseNumber(percentIncrease, { format: "##.00%", locale: "us" });
+        }
+        else {
+            // Otherwise only a number, meaning 2 for 2%, etc, so convert it back to a decimal:
+            percentIncrease = $.parseNumber(percentIncrease, { format: "##.00", locale: "us" }) / 100;
+        }
+        tbPercentIncrease.val(percentIncrease);
+
+        // find and reformat salary amount:
+        var tbSalaryAmount = row.find(".currency input");
+        var salaryAmount = tbSalaryAmount.val();
+        if (salaryAmount.search("$") > -1) {
+            // Then the number entered was a salary amount, so parse accordingly:
+            salaryAmount = $.parseNumber(salaryAmount, { format: "$#,###,###.00", locale: "us" });
+        }
+        else {
+            // Otherwise only a number, meaning 2 for $2, etc, so convert it back to a decimal:
+            salaryAmount = $.parseNumber(salaryAmount, { format: "#######.00", locale: "us" });
+        }
+        tbSalaryAmount.val(salaryAmount);
+
+        if (indexNeedsAdjusting) {
+            var inputs = row.find("th: input, td: input, td: select");
+            inputs.each(function (index, val) {
+                //debugger;
+                var myScenarioIndex = $myScenarioIndex;
+                var name = val.name;
+                var k = getOldValueFromString(name, "[", "]", 0);
+                var oldIndex = $.parseNumber(k, { format: "[##0", locale: "us" }) * 1;
+                if (oldIndex != 0 && oldIndex != myScenarioIndex) {
+                    val.name = name.replace(k, "[" + myScenarioIndex);
+                }
+            });
+        }
+    };
+
+    function doesIndexNeedAdjusting(index, row) {
+        var hiddenScenaroNumber = row.find("#hiddenScenarioNumber");
+        var scenarioNumber = hiddenScenaroNumber.val();
+        if (scenarioNumber - 1 != index) {
+            //        var name = hiddenScenaroNumber[0].name;
+            //        var oldIndex = getOldValueFromString(name, "[", "]", 1);
+            //        if (oldIndex != index) {
+            return true;
+        }
+        return false;
+    }
+        //-->
+</script>
