--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
@@ -173,7 +173,7 @@
 <script type="text/javascript">
 <!--
     function deleteSra(referenceNum) {
-        debugger;
+        //debugger;
         var token = $('[name=__RequestVerificationToken]').val();
         var answer = confirm("Are you sure you want to delete this analysis (ref #: " + referenceNum + ")?");
         if (!answer) return false;
