Added data picker back to _SalaryReviewAnalysis.cshtml
Added
//return RedirectToAction("Details", new { referenceNumber }); as example, and refactored to use lambda:
using MvcContrib;
return this.RedirectToAction<SalaryReviewAnalysisController>(a => a.Details(referenceNumber)); as just trying to get a feel for all the various approaches to doing the same thing.

and

--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysis.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysis.cshtml
@@ -82,10 +82,10 @@
         //            oColumnNames[oColumns[i].sName] = i;
         //        };
 
-        //        // This adds a date picker to the DataApproved field:
-        //        $(function () {
-        //            $("#SalaryReviewAnalysis_DateApproved").datepicker();
-        //        });
+        // This adds a date picker to the DataApproved field:
+        $(function () {
+            $("#SalaryReviewAnalysis_DateApproved").datepicker();
+        });
 
         //        var originalScenariosRows = dtable.find('tbody tr');
         var originalScenariosRows = $('#scenarios').find('tbody tr');
