--- a/Esra.Web/Views/SalaryScale/Details.cshtml
+++ b/Esra.Web/Views/SalaryScale/Details.cshtml
@@ -25,5 +25,9 @@
         $('select').change(function () {
             $(this).parents('form').submit();
         });
+
+        $('select').select(function () {
+            $(this).parents('form').submit();
+        });
     </script>
 </div>
