--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysis.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysis.cshtml
@@ -231,6 +231,48 @@
             e.preventDefault();
         });
 
+        // Clear all but the checkbox that was just selected,
+        // and set the date approved if it was not previously set.
+        // --or --
+        // Clear the date approved if a checkbox was de-selected, meaning that there
+        // is not longer an approved scenario for it to correspond to:
+        function toggleCheckboxesAndSetDateApproved(checkbox) {
+            //debugger;
+            var checked = $(checkbox)[0].checked;
+            var checkboxes = $('#scenarios').find("#cbxApproved");
+
+            if (checked) {
+                checkboxes.each(function (i, val) {
+                    // clear all checkboxes
+                    val = $(val)[0];
+                    val.checked = false;
+
+                });
+                // since we cleared all the checkboxes,
+                // recheck the one that was selected before we cleared them all:
+                checkbox[0].checked = true;
+
+                // if a date approved was not already set, set it to today's date:
+                var tbDateApproved = $("#SalaryReviewAnalysis_DateApproved");
+                if (tbDateApproved.val() == "") {
+                    var currentTime = new Date();
+                    tbDateApproved.val($.format.date(currentTime, "MM/dd/yyyy"));
+                }
+            }
+            else {
+                // the approved scenario has been de-selected, so also clear the data approved:
+                $("#SalaryReviewAnalysis_DateApproved").val("");
+            }
+
+        }
+
+        $("#cbxApproved").live("change", function (e) {
+            var checkbox = $(this);
+            toggleCheckboxesAndSetDateApproved(checkbox);
+            return false;
+
+        });
+
         // Calculate and update the SalaryAmount when an individual scenario"s
         // PercentIncrease is changed:
         //        $("#tbPercentIncrease").live("change", function (e) {
@@ -337,6 +379,14 @@
             var answer = confirm("Are you sure you want to delete this scenario #" + scenarioNumber.toString() + " ?");
             if (!answer) return false;
 
+            // if you delete the "approved" scenario, then you need to clear date approved:
+            var chkboxApproved = row.find("input[type='checkbox']");
+            if (chkboxApproved[0].checked == true) {
+                // clear date approved because it is not possible to have
+                // more than one approved checkbox selected at a single time:
+                $("#SalaryReviewAnalysis_DateApproved").val("");
+            }
+            // remove the row:
             row.remove();
 
             var scenarioIndex = scenarioNumber - 1;
@@ -373,35 +423,52 @@
 
             // Reset the criteria drop-down list back to what it when it was loaded from the database initially:
             // Note that I need to reset it based on the Text being displayed, not the value.
+            var ddlSelectionTypes = row.find('#ddlSelectionType');
             if (typeof selectionType === 'boolean') {
-                // do nothing because this updated was based on a new selection type being selected.
+                if (selectionType == true) {
+                    ddlSelectionTypes.val("");
+                }
+                // otherwise do nothing because this method call was the result of a
+                // new value being selected from the drop-down list.
             }
             else {
                 if (selectionType == "") {
-                    myIndex = 0;
+                    // myIndex = 0;
+                    ddlSelectionTypes.val("");
                 }
                 else {
                     // 1. Retrieve the index for the text value from the previously loaded text value/option's index dictionary:
-                    myIndex = selectionTypeTextDictionary[selectionType];
+                    var myIndex = selectionTypeTextDictionary[selectionType];
+                    // 2. Find the select list control:
+                    ddlSelectionTypes = row.find('#ddlSelectionType');
+                    // 3. Reset the index back to its original value:
+                    // Note that this doesn't seem to have any effect with FF v6.01.
+                    ddlSelectionTypes.selectedIndex = myIndex;
+                    // 4. Reset the options[i].selected to true:
+                    // Note that this is what actually resets the control in FF v6.01:
+                    ddlSelectionTypes[0].options[myIndex].selected = true;
+                    // The following also works in FF v6.01:
+                    //row.find("select option")[myIndex].selected = true;
                 }
-                // 2. Find the select list control:
-                var ddlSelectionTypes = row.find('#ddlSelectionType');
-                // 3. Reset the index back to its original value:
-                // Note that this doesn't seem to have any effect with FF v6.01.
-                ddlSelectionTypes.selectedIndex = myIndex;
-                // 4. Reset the options[i].selected to true:
-                // Note that this is what actually resets the control in FF v6.01:
-                ddlSelectionTypes[0].options[myIndex].selected = true;
-                // The following also works in FF v6.01:
-                //row.find("select option")[myIndex].selected = true;
             }
 
             var chkboxApproved = row.find("input[type='checkbox']");
-            if (isApproved == true) {
-                chkboxApproved[0].checked = true;
-            }
-            else if (isApproved == false) {
-                chkboxApproved[0].checked = false;
+
+            if (typeof isApproved === 'boolean') {
+                if (isApproved == true) {
+                    chkboxApproved[0].checked = true;
+                    // clear other check boxes and populate date approved if it is not set
+                    toggleCheckboxesAndSetDateApproved(chkboxApproved);
+                }
+                else {
+                    //else isApproved == false
+                    if (chkboxApproved[0].checked == true) {
+                        // clear date approved because it is not possible to have
+                        // more than one approved checkbox selected at a single time:
+                        $("#SalaryReviewAnalysis_DateApproved").val("");
+                    }
+                    chkboxApproved[0].checked = false;
+                }
             }
             // Otherwise, leave untouched.
         }
@@ -412,7 +479,7 @@
             // get the current row and its data array:
             var row = $(selector).parents("tr");
 
-            updateDisplayedRowValues(row, percentIncrease, salaryAmount, resetSection);
+            updateDisplayedRowValues(row, percentIncrease, salaryAmount, resetSection, null);
         }
 
         // Worker method that when given a dataTable row,
