--- a/Esra.Web/Views/Shared/_SalaryScaleSelectLists.cshtml
+++ b/Esra.Web/Views/Shared/_SalaryScaleSelectLists.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Esra.Web.Models.SalaryScaleViewModel
+@section AdditionalScripts{
+}
 <div>
     <fieldset class="display-form">
         <legend>Salary Scales</legend>
@@ -6,8 +8,14 @@
         {
             //@Html.AntiForgeryToken()
             <ul>
+                @*<li>@Html.Label("Search by Title Code")</li>
                 <li>
                     <div class="editor-field">
+                        @Html.TextBox("tbTitleCodeSearch")
+                    </div>
+                </li>*@
+                <li>
+                    <div class="editor-field ui-widget">
                         @Html.DropDownListFor(x => x.TitleCode,
                         new SelectList(Model.Titles.OrderBy(x => x.TitleCode),
                             "TitleCode",
@@ -25,8 +33,14 @@
         @using (Html.BeginForm("Details", "SalaryScale", FormMethod.Get))
         {
             <ul>
+                @* <li>@Html.Label("Search by Payroll Title")</li>
                 <li>
                     <div class="editor-field">
+                        @Html.TextBox("tbTitleSearch")
+                    </div>
+                </li>*@
+                <li>
+                    <div class="editor-field ui-widget">
                         @Html.DropDownListFor(x => x.TitleCode,
                         new SelectList(Model.Titles,
                             "TitleCode",
@@ -41,4 +55,68 @@
             // end SelectTitleForm
         }
     </fieldset>
+    @*<div class="ui-widget">
+        <label>
+            Your preferred programming language:
+        </label>
+        <select>
+            <option value="a">asp</option>
+            <option value="c">c</option>
+            <option value="cpp">c++</option>
+            <option value="cf">coldfusion</option>
+            <option value="g">groovy</option>
+            <option value="h">haskell</option>
+            <option value="j">java</option>
+            <option value="js">javascript</option>
+            <option value="p1">perl</option>
+            <option value="p2">php</option>
+            <option value="p3">python</option>
+            <option value="r">ruby</option>
+            <option value="s">scala</option>
+        </select>
+    </div>*@ @*<script type="text/javascript">
+
+        $('#tbTitleCodeSearch').autocomplete({
+            select: function (event, ui) {
+                debugger;
+                var item = ui.item;
+                $("#titlecode-drop-down").val(item.value);
+            }
+        });
+
+        $('#titlecode-drop-down').autocomplete({
+            select: function (event, ui) {
+                debugger;
+                var item = ui.item;
+                $("#titlecode-drop-down").val(item.value);
+            }
+        });
+
+        $('#tbTitleCodeSearch').bind("autocompleteselect", function (event, ui) {
+            debugger;
+        });
+
+        $('#tbTitleCodeSearch').autocomplete(function () {
+            debugger;
+            var selectedTitleCode = $(this).val();
+            $("#titlecode-drop-down").val(selectedTitleCode);
+        });
+
+        $(function () {
+            var availableTitleCodes = [];
+            var availableTitles = []
+
+            $($("#titlecode-drop-down")[0].options).each(function (i, val) {
+                availableTitleCodes[i] = $(val).val();
+            });
+
+            $($("#title-drop-down")[0].options).each(function (i, val) {
+                availableTitles[i] = $(val).text();
+            });
+
+            $('#tbTitleCodeSearch').autocomplete({ source: availableTitleCodes });
+            $('#tbTitleSearch').autocomplete({ source: availableTitles });
+            $("#titlecode-drop-down").autocomplete({ source: availableTitleCodes });
+        });
+    </script>*@
 </div>
