Fixed navigation so it does not have "User Administration" tab when emulating department user.
Fixed when canceling a Salary Review Analysis Edit, "Cancel/Back" takes you back to the Details View, not the Index view.

Fixed logic to display only reviewers and analysis within a user's units and/or college.

Fixed n + 1 calls to database for getting salary steps.

--- a/Esra.Web/Views/Shared/_Navigation.cshtml
+++ b/Esra.Web/Views/Shared/_Navigation.cshtml
@@ -1,16 +1,20 @@
 ﻿@using Esra.Web.Resources
-<ul class="navigation">
-    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-    <li>@Html.ActionLink("Salary Scales", "Index", "SalaryScale")</li>
-    <li>@Html.ActionLink("Employee Salary Comparison", "Index", "EmployeeSalaryComparison")</li>
-    <li>@Html.ActionLink("Salary Review Analysis", "Index", "SalaryReviewAnalysis")</li>
-    @{
-        if (User.IsInRole(GlobalConstants.ROLE_ADMIN))
+@{
+    var isDepartmentUser = Session[Esra.Web.Resources.GlobalConstants.KEY_IS_DEPARTMENT_USER] as bool?;
+    <ul class="navigation">
+        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+        <li>@Html.ActionLink("Salary Scales", "Index", "SalaryScale")</li>
+        <li>@Html.ActionLink("Employee Salary Comparison", "Index", "EmployeeSalaryComparison")</li>
+        <li>@Html.ActionLink("Salary Review Analysis", "Index", "SalaryReviewAnalysis")</li>
+        @if (isDepartmentUser == null || !(bool)isDepartmentUser)
         {
-        <li>
-            @Html.ActionLink("User Administration", "Index", "UserAdministration")
-        </li>
+            if (User.IsInRole(GlobalConstants.ROLE_ADMIN))
+            {
+            <li>
+                @Html.ActionLink("User Administration", "Index", "UserAdministration")
+            </li>
+            }
         }
-    }
-    <li>@Html.ActionLink("About", "About", "Home")</li>
-</ul>
+        <li>@Html.ActionLink("About", "About", "Home")</li>
+    </ul>
+}
