Added auto-complete functionality for SalaryScale title codes.

--- a/Esra.Web/Views/SalaryScale/Details.cshtml
+++ b/Esra.Web/Views/SalaryScale/Details.cshtml
@@ -22,12 +22,44 @@
         }
     </div>
     <script type="text/javascript">
+
+        $(document).ready(function () {
+            var availableTitleCodes = [];
+            var availableTitles = [];
+
+            $($("#titlecode-drop-down")[0].options).each(function (i, val) {
+                availableTitleCodes[i] = $(val).val();
+            });
+
+            $($("#title-drop-down")[0].options).each(function (i, val) {
+                availableTitles[i] = $(val).text();
+            });
+
+            $("#titlecode-drop-down").combobox({
+                source: availableTitleCodes,
+                delay: 0,
+                selected: function (event, ui) {
+                    // Event handling code goes here.
+                    $(this).parents('form').submit();
+                }
+            }); // combobox });
+
+            $("#title-drop-down").combobox({
+                source: availableTitles,
+                delay: 0,
+                selected: function (event, ui) {
+                    //debugger;
+                    // Event handling code goes here.
+                    $(this).parents('form').submit();
+                } // selected
+            }); // combobox });
+
+        });
+
         $('select').change(function () {
+            //debugger;
             $(this).parents('form').submit();
         });
 
-        $('select').select(function () {
-            $(this).parents('form').submit();
-        });
     </script>
 </div>
