--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -23,100 +23,39 @@
     <script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"
         type="text/javascript"></script>
     <script type="text/javascript" src="../../Scripts/jquery-dateFormat.js"></script>
-    @*<script type="text/javascript" src="../../Scripts/jquery.ui.core.js"></script>
-    <script type="text/javascript" src="../../Scripts/jquery.ui.widget.js"></script>
-    <script type="text/javascript" src="../../Scripts/jquery.ui.button.js"></script>
-    <script type="text/javascript" src="../../Scripts/jquery.ui.position.js"></script>
-    <script type="text/javascript" src="../../Scripts/jquery.ui.autocomplete.js"></script>*@
+    @*<script type="text/javascript" src="../../Scripts/jquery.ui.autocomplete.js"></script>*@
+    <script type="text/javascript" src="../../Scripts/jquery.ui.combobox.js"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
     }
-@*    <script type="text/javascript">
-        (function ($) {
-            $.widget("ui.combobox", {
-                _create: function () {
-                    var self = this;
-                    var select = this.element.hide();
-                    var input = $("<input>")
-					.insertAfter(select)
-					.autocomplete({
-					    source: function (request, response) {
-					        var matcher = new RegExp(request.term, "i");
-					        response(select.children("option").map(function () {
-					            var text = $(this).text();
-					            if (!request.term || matcher.test(text))
-					                return {
-					                    id: $(this).val(),
-					                    label: text.replace(new RegExp("(?![^&;]+;)(?!<[^<>]*)(" + request.term.replace(/([\^\$\(\)\[\]\{\}\*\.\+\?\|\\])/gi, "\\$1") + ")(?![^<>]*>)(?![^&;]+;)", "gi"), "<strong>$1</strong>"),
-					                    value: text
-					                };
-					        }));
-					    },
-					    delay: 0,
-					    select: function (e, ui) {
-					        if (!ui.item) {
-					            // remove invalid value, as it didn't match anything
-					            $(this).val("");
-					            return false;
-					        }
-					        $(this).focus();
-					        select.val(ui.item.id);
-					        self._trigger("selected", null, {
-					            item: select.find("[value='" + ui.item.id + "']")
-					        });
-
-					    },
-					    minLength: 0
-					})
-					.addClass("ui-widget ui-widget-content ui-corner-left");
-                    $("<button>&nbsp;</button>")
-				.insertAfter(input)
-				.button({
-				    icons: {
-				        primary: "ui-icon-triangle-1-s"
-				    },
-				    text: false
-				}).removeClass("ui-corner-all")
-				.addClass("ui-corner-right ui-button-icon")
-				.position({
-				    my: "left center",
-				    at: "right center",
-				    of: input,
-				    offset: "-1 0"
-				}).css("top", "")
-				.click(function () {
-				    // close if already visible
-				    if (input.autocomplete("widget").is(":visible")) {
-				        input.autocomplete("close");
-				        return;
-				    }
-				    // pass empty string as value to search for, displaying all results
-				    input.autocomplete("search", "");
-				    input.focus();
-				});
-                }
-            });
-
-        })(jQuery);
-
-        $(function () {
-            $("select").combobox();
-        });
-    </script>
+    @MvcMiniProfiler.MiniProfiler.RenderIncludes()
+    @RenderSection("AdditionalScripts", false)
     <style type="text/css">
-        /* TODO shouldn't be necessary */
-        .ui-button-icon-only .ui-button-text
+        /* TODO shouldn't be necessary */.ui-button-icon-only .ui-button-text
         {
             padding: 0.35em;
         }
         .ui-autocomplete-input
         {
             padding: 0.48em 0 0.47em 0.45em;
+            width: 30em;
         }
-    </style>*@
-    @MvcMiniProfiler.MiniProfiler.RenderIncludes()
-    @RenderSection("AdditionalScripts", false)
+        .ui-autocomplete
+        {
+            max-height: 200px;
+            overflow-y: auto; /* prevent horizontal scrollbar */
+            overflow-x: hidden; /* add padding to account for vertical scrollbar */
+            padding-right: 20px;
+        }
+        /* IE 6 doesn't support max-height
+	 * we use height instead, but this forces the menu to always be this tall
+	 */
+        * html .ui-autocomplete
+        {
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
     <div class="wrapper">
