--- a/Esra.Web/Views/SalaryScale/Index.cshtml
+++ b/Esra.Web/Views/SalaryScale/Index.cshtml
@@ -9,6 +9,40 @@
     }
     <script language="JavaScript" type="text/javascript">
     <!--        //
+        $(document).ready(function () {
+            var availableTitleCodes = [];
+            var availableTitles = [];
+
+            $($("#titlecode-drop-down")[0].options).each(function (i, val) {
+                availableTitleCodes[i] = $(val).val();
+            });
+
+            $($("#title-drop-down")[0].options).each(function (i, val) {
+                availableTitles[i] = $(val).text();
+            });
+
+            $("#titlecode-drop-down").combobox({
+                source: availableTitleCodes,
+                delay: 0,
+                selected: function (event, ui) {
+                    //debugger;
+                    // Event handling code goes here.
+                    $(this).parents('form').submit();
+                } // selected
+            }); // combobox });
+
+            $("#title-drop-down").combobox({
+                source: availableTitles,
+                delay: 0,
+                selected: function (event, ui) {
+                    //debugger;
+                    // Event handling code goes here.
+                    $(this).parents('form').submit();
+                } // selected
+            }); // combobox });
+
+        });
+
         $('select').change(function () {
             $(this).parents('form').submit();
         });
