--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
     <script type="text/javascript" src="../../Scripts/jquery-dateFormat.js"></script>
     @*<script type="text/javascript" src="../../Scripts/jquery.ui.autocomplete.js"></script>*@
     <script type="text/javascript" src="../../Scripts/jquery.ui.combobox.js"></script>
+    @*<link href="@Url.Css("combobox-style.css")" rel="stylesheet" type="text/css" />*@
+    @*<script type="text/javascript" src="../../Scripts/jquery.combobox.js"></script>*@
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
@@ -60,12 +62,12 @@
 <body>
     <div class="wrapper">
         @* Render System Wide Status Here *@ @*
-        <div id="system_wide_status">
-            <div id="system_wide_status_text">
+		<div id="system_wide_status">
+			<div id="system_wide_status_text">
 
-            </div>
-        </div>
-        *@
+			</div>
+		</div>
+		*@
         <div id="branding">
             <span class="header">
                 <h1>
@@ -142,20 +144,20 @@
         </div>
     </div>
     @* -- Include if you want placeholder support *@ @*
-    <script src="@Url.Script("Common/jquery.placeholder.min.js")" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function () {
-            $('input, textarea').placeholder();
-        });
-    </script>
-    *@ @*----------- Google Analytics ---------- *@ @*<script>
-        var _gaq = [["_setAccount", "UA-XXXXX-X"], ["_trackPageview"]]; // Change UA-XXXXX-X to be your site's ID
-        (function (d, t) {
-            var g = d.createElement(t), s = d.getElementsByTagName(t)[0]; g.async = 1;
-            g.src = ("https:" == location.protocol ? "//ssl" : "//www") + ".google-analytics.com/ga.js";
-            s.parentNode.insertBefore(g, s)
-        } (document, "script"));
-    </script>*@
+	<script src="@Url.Script("Common/jquery.placeholder.min.js")" type="text/javascript"></script>
+	<script type="text/javascript">
+	    $(function () {
+	        $('input, textarea').placeholder();
+	    });
+	</script>
+	*@ @*----------- Google Analytics ---------- *@ @*<script>
+	                                                      var _gaq = [["_setAccount", "UA-XXXXX-X"], ["_trackPageview"]]; // Change UA-XXXXX-X to be your site's ID
+	                                                      (function (d, t) {
+	                                                          var g = d.createElement(t), s = d.getElementsByTagName(t)[0]; g.async = 1;
+	                                                          g.src = ("https:" == location.protocol ? "//ssl" : "//www") + ".google-analytics.com/ga.js";
+	                                                          s.parentNode.insertBefore(g, s)
+	                                                      } (document, "script"));
+	</script>*@
     <script language="JavaScript" type="text/javascript">
         $(document).ready(function () {
             $('.datatable').dataTable({
