--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -150,7 +150,7 @@
             });
 
             $('input.save-employee', '#employees').live('click', function (e) {
-                debugger;
+                //debugger;
                 var rowId = $(this).data("id");
                 var employeeRow = $('tr[data-id=' + rowId + ']', '#employees');
                 var row = employeeRow.next();
