--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -23,9 +23,12 @@
 
             // End hiding -->
     </script>
-    <script type="text/javascript" src="../../Scripts/dataTables.naturalSort.js"></script>
-    <script type="text/javascript" src="../../Scripts/dataTables.currency.js"></script>
-    <script type="text/javascript" src="../../Scripts/dataTables.deptEmployee.js"></script>
+    @*<script type="text/javascript" src="../../Scripts/dataTables.naturalSort.js"></script>*@
+    <script src="@Url.Script("dataTables.naturalSort.js")" type="text/javascript"></script>
+    @*<script type="text/javascript" src="../../Scripts/dataTables.currency.js"></script>*@
+    <script src="@Url.Script("dataTables.currency.js")" type="text/javascript"></script>
+    @* <script type="text/javascript" src="../../Scripts/dataTables.deptEmployee.js"></script>*@
+    <script src="@Url.Script("dataTables.deptEmployee.js")" type="text/javascript"></script>
 }
 @{
     ViewBag.Title = "Employee Salary Comparison";
