--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
@@ -109,7 +109,7 @@
                                 <a href='@Url.Action("Details", "SalaryReviewAnalysis", new { ReferenceNumber = @a.ReferenceNumber })'>
                                     <img alt="View Details" src='@Url.Image("Details.png")' />
                                 </a>&nbsp;&nbsp;
-                                <img id="delete-sra" src="../../Images/delete.png" class="edit-row" alt="delete"
+                                <img id="delete-sra" src='@Url.Image("delete.png")' class="edit-row" alt="delete"
                                 onclick="deleteSra(@a.ReferenceNumber)" />
                             </td>
                             <td>
