--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -22,9 +22,11 @@
     @*<script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="text/javascript"></script>*@
     <script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"
         type="text/javascript"></script>
-    <script type="text/javascript" src="../../Scripts/jquery-dateFormat.js"></script>
+    @*<script type="text/javascript" src="../../Scripts/jquery-dateFormat.js"></script>*@
+    <script src="@Url.Script("jquery-dateFormat.js")" type="text/javascript"></script>
     @*<script type="text/javascript" src="../../Scripts/jquery.ui.autocomplete.js"></script>*@
-    <script type="text/javascript" src="../../Scripts/jquery.ui.combobox.js"></script>
+    @* <script type="text/javascript" src="../../Scripts/jquery.ui.combobox.js"></script>*@
+    <script src="@Url.Script("jquery.ui.combobox.js")" type="text/javascript"></script>
     @*<link href="@Url.Css("combobox-style.css")" rel="stylesheet" type="text/css" />*@
     @*<script type="text/javascript" src="../../Scripts/jquery.combobox.js"></script>*@
     @if (false)
